--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@angular/material": "^18.2.1"
+    "@angular/material": "^18.2.1",
+    "@types/marked": "^5.0.2",
+    "marked": "^14.0.0"
   }
 }
