--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-MONGODB_URL=mongodb://localhost:27017/your_database_name
+MONGODB_URI=mongodb://localhost:27017/your_database_name
 
 # JWT Configuration
 JWT_SECRET_KEY=your_jwt_secret_key
